--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -3,10 +3,10 @@ h3 {
 }
 
 .login-form {
-    padding: 20px 0px;
-    .form {
-        padding: 20px 0px;
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 
     .div {
         display: flex;
@@ -24,7 +24,15 @@ h3 {
         font-size: $token-font-size-md;
         border: 0px solid white;
         font-weight: 200;
-    
+        margin: 20px 0px;
+        
+        box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+        // border: 1px solid #d1d9e6;
+        // right: 3%;
+        // &:hover {
+        //     background-color: $token-color-white;
+        //     box-shadow:inset 2px 2px 5px #b8b9be,inset -3px -3px 7px #fff;
+        // }
         &:hover {
             color: $token-button-primary-text-color-hover;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
