--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -9,23 +9,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+
+    @media (min-width: $token-media-query-lg) {
+        background-size: cover;
+    }
 }
  
 .homepage {
-    .container {
-        width: 90%;
-        height: 90%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        @media (min-width: $token-media-query-lg) {
-            flex-direction: row;
-            align-content: space-around;
-            justify-content: space-around;
-        }
-    }
 
     &-title {
         font-family: $token-font-family-heading;
@@ -62,10 +52,12 @@
             font-family: $token-font-family-text;
             font-size: $token-font-size-md;
         }
+
+       
     }
 
     .login-button {
-        background-color: rgb(0 0 0 / 0%);
+        background-color: white;
         border-color: rgb(0 0 0 / 0%);
         border-radius: 10px;
         width: 100px;
@@ -73,10 +65,13 @@
         font-family: $token-font-family-text;
         font-size: $token-font-size-md;
         position: absolute;
+        // box-shadow: 24px 17px 25px -4px white, -2px 0px 25px 0px rgb(0 0 0 / 54%);
+        box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+        border: 1px solid #d1d9e6;
         right: 3%;
         &:hover {
             background-color: $token-color-white;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow:inset 2px 2px 5px #b8b9be,inset -3px -3px 7px #fff;
         }
 
     }
@@ -89,13 +84,16 @@
         font-family: $token-font-family-text;
         color: $token-button-primary-text-color-base;
         font-size: $token-font-size-md;
-        border: 0px solid white;
+        border: 1px solid #b28fec;
         font-weight: 200;
+        box-shadow: 3px 3px 6px #48297d, -3px -3px 6px #fff;
     
         &:hover {
-            background: $token-color-gradient-purple-gradient;
+            // background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
+            background: $token-button-primary-background-color-base;
             color: $token-button-primary-text-color-hover;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow:inset 2px 2px 5px #48297d, inset -2px -2px 5px #cdb7f2;
         }
     }
 }
