--- a/src/components/shared/container/container.scss
+++ b/src/components/shared/container/container.scss
@@ -1,10 +1,31 @@
 .container {
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgb(0, 0, 0, 0.4);
-    border: 0px solid grey;
+    background-color: white;
+    border: 1px solid grey;
+
+    // width: 1000px;
+    // height: 300px;
+    overflow: auto;
+    padding: 20px 20px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: var(--flexDirection);
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+
+    button {
+        width: 15vw;
+        height: 10vw;
+    }
+
+    img {
+        width: 50px;
+        height: 50px;
+        padding: 0px 5px;
+    }
 }
 
 .container-content {
@@ -18,6 +39,7 @@
     display: flex;
     justify-content: center;
     border-radius: 10px;
+    flex-direction: var('flexDirection');
 }
 
 .close {
