--- a/src/components/shared/modal/modal.scss
+++ b/src/components/shared/modal/modal.scss
@@ -5,9 +5,9 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
     background-color: rgb(0, 0, 0, 0.4);
     border: 0px solid grey;
+    backdrop-filter: blur(10px);
 }
 
 .modal-content {
@@ -46,3 +46,4 @@
         background-color: var(button-bg-color);
     }
 }
+
