--- a/src/components/shared/page/page-pane/page-pane.scss
+++ b/src/components/shared/page/page-pane/page-pane.scss
@@ -2,7 +2,12 @@
     width: 83vw;
     min-height: 40vw;
     max-height: 60vw;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
     border-radius: 40px;
     box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
