--- a/src/components/shared/text-input/text-input.scss
+++ b/src/components/shared/text-input/text-input.scss
@@ -5,7 +5,6 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     .required {
         color: $token-font-color-danger;
@@ -15,8 +14,14 @@
         color: $token-font-color-danger;
     }
 
+    &--content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     &--title {
-        font-size: 15px;
+        font-size: 18px;
         font-weight: $token-font-weight-normal;
         margin: 10px 0px;
         text-align: left;
@@ -27,5 +32,8 @@
         height: 30px;
         border-radius: 8px;
         border: 1px solid grey;
+        padding: 0px 10px;
+        font-size: 16px;
+        font-family: $token-font-family-text;
     }
 }
