--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -8,9 +8,10 @@
     background-repeat: no-repeat;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
     @media (min-width: $token-media-query-lg) {
+        justify-content: space-around;
         background-size: cover;
     }
 }
@@ -86,14 +87,14 @@
         font-size: $token-font-size-md;
         border: 1px solid #b28fec;
         font-weight: 200;
-        box-shadow: 3px 3px 6px #48297d, -3px -3px 6px #fff;
+        box-shadow: 4px 5px 13px #48297d, -3px -3px 6px #fff;
     
         &:hover {
             // background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
             background: $token-button-primary-background-color-base;
             color: $token-button-primary-text-color-hover;
             // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            box-shadow:inset 2px 2px 5px #48297d, inset -2px -2px 5px #cdb7f2;
+            box-shadow:inset 3px 3px 6px #48297d, inset -3px -3px 5px #cdb7f2;
         }
     }
 }
