patient information family history, health history, and personal information fields

--- a/src/components/shared/alert-box/alert-box.scss
+++ b/src/components/shared/alert-box/alert-box.scss
@@ -1,6 +1,6 @@
 .alert-box {
     font-family: $token-font-family-text;
-
+    display: var(--alert-box-display);
     .error {
         background-color: white;
         display: flex;
