--- a/src/components/shared/modal/modal.scss
+++ b/src/components/shared/modal/modal.scss
@@ -16,8 +16,7 @@
     padding: 20px;
     border: 0px solid grey;
     width: 50%;
-    height: inherit;
-    max-height: 80%;
+    height: auto;
     display: flex;
     justify-content: center;
     border-radius: 10px;
