--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,21 +1,21 @@
 .navbar-bg{
     box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
     width: 5vw;
-    height: 100vw;
+    height: 100%;
     top: 0;
     left: 0px;
     top: 0px;
     background-size: cover;
     display: flex;
     position: -webkit-sticky; /* Safari */
-    position: sticky;
+    position: fixed;
     top: 0px;
     justify-content: center;
     align-items: flex-start;
     -webkit-animation: slideIn 0.5s backwards;
     animation: slideIn 0.5s backwards;
     z-index: 20;
-    background-color: white;
+    // background-color: white;
 
     .link-list {
         font-family: $token-font-family-text;
@@ -39,7 +39,7 @@
         .link-list {
             padding: 0px;
             align-items: flex-start;
-            width: auto;
+            width: inherit;
             backdrop-filter: blur(8px);
 
             span {
@@ -63,9 +63,9 @@
 
     .blurred {
         // width: 78%;
-        width: auto;
+        width: inherit;
         height: 100vw;
-        border: 2px solid #FFFFFF;
+        // border: 2px solid #FFFFFF;
         background-size: cover;
         display: flex;
         align-items: center;
@@ -129,19 +129,19 @@
 @-webkit-keyframes slideIn {
     0% {
         width: 16vw;
-        height: 100vw;
+        height: 100%;
     }
 
     100% {
         width: 5vw;
-        height: 100vw;
+        height: 100%;
     }
     
 }
 @-moz-keyframes slideIn {
     0% {
         width: 16vw;
-        height: 100vw;
+        height: 100%;
     }
 
     100% {
@@ -154,7 +154,7 @@
 @keyframes slideIn {
     0% {
         width: 16vw;
-        height: 100vw;
+        height: 100%;
     }
 
     100% {
@@ -167,7 +167,7 @@
 @-webkit-keyframes slide {
     0% {
         width: 5vw;
-        height: 100vw;
+        height: 100%;
     }
     100% {
         width: 16vw;
@@ -179,22 +179,22 @@
 @-moz-keyframes slide {
     0% {
         width: 5vw;
-        height: 100vw;
+        height: 100%;
     }
     100% {
         width: 16vw;
-        height: 100vw;
+        height: 100%;
     }
 }
 
 @keyframes slide {
     0% {
         width: 5vw;
-        height: 100vw;
+        height: 100%;
     }
     100% {
         width: 16vw;
-        height: 100vw;
+        height: 100%;
     }  
 }
 
