--- a/src/components/patient-form/patient-information/patient-information.scss
+++ b/src/components/patient-form/patient-information/patient-information.scss
@@ -7,6 +7,17 @@
     align-items: center;
     align-content: center;
 
+    h5{
+        margin: 10px 0px 0px 0px;
+    }
+
+    .header{
+        width: 100px;
+    }
+    .content {
+        display: flex;
+    }
+
     h2 {
         font-family: $token-font-family-heading;
     }
@@ -21,5 +32,58 @@
         flex-direction: column;
         align-items: flex-start;
         padding: 10px 60px;
+        height: 100%;
+    }
+
+    .standard {
+        background-color: $token-button-primary-background-color-base;
+        width: 100px;
+        height: 40px;
+        border-radius: 10px;
+        margin: 20px 10px;
+        font-family: $token-font-family-text;
+        color: $token-button-primary-text-color-base;
+        font-size: $token-font-size-md;
+        border: 0px solid white;
+        font-weight: 200;
+        
+        box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        // border: 1px solid #d1d9e6;
+        // right: 3%;
+        // &:hover {
+        //     background-color: $token-color-white;
+        //     box-shadow:inset 2px 2px 5px #b8b9be,inset -3px -3px 7px #fff;
+        // }
+        &:hover {
+            background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
+            color: $token-button-primary-text-color-hover;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        }
+    }
+
+    .save {
+        background-color: $token-color-secondary-base;
+        width: 100px;
+        height: 40px;
+        border-radius: 10px;
+        margin: 20px 10px;
+        font-family: $token-font-family-text;
+        color: $token-button-primary-text-color-base;
+        font-size: $token-font-size-md;
+        border: 0px solid white;
+        font-weight: 200;
+        
+        box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        // border: 1px solid #d1d9e6;
+        // right: 3%;
+        // &:hover {
+        //     background-color: $token-color-white;
+        //     box-shadow:inset 2px 2px 5px #b8b9be,inset -3px -3px 7px #fff;
+        // }
+        &:hover {
+            background: linear-gradient(153.24deg, #008AFF 12.84%, #08B696 85.76%);
+            color: $token-button-primary-text-color-hover;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        }
     }
 }
