--- a/src/components/shared/address-input/address-input.scss
+++ b/src/components/shared/address-input/address-input.scss
@@ -2,7 +2,7 @@
     font-family: $token-font-family-text;
     width: auto;
     height: auto;
-    padding: 10px;
+    padding: 10px 0px;
     display: flex;
     flex-direction: column;
 
@@ -17,12 +17,12 @@
     &--content {
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         flex-direction: column;
     }
 
     &--title {
-        font-size: 18px;
+        font-size: 16px;
         font-weight: $token-font-weight-normal;
         margin: 10px 0px;
         text-align: left;
