--- a/src/components/shared/row/row.scss
+++ b/src/components/shared/row/row.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 10px 10px;
+    padding: 0px 10px 0px 10px;
     height: auto;
     align-items: center;
 }
