--- a/src/components/shared/search-input/search-input.scss
+++ b/src/components/shared/search-input/search-input.scss
@@ -3,8 +3,8 @@
     font-size: 16px;
     font-family: $token-font-family-text;
     width: auto;
-    height: 80px;
-    padding: 10px;
+    height: 75px;
+    padding: 0px 10px;
     display: flex;
     flex-direction: column;
 
@@ -17,7 +17,7 @@
     }
 
     &--title {
-        font-size: 18px;
+        font-size: 16px;
         font-weight: $token-font-weight-normal;
         margin: 10px 0px;
         text-align: left;
