--- a/src/components/shared/select-input/select-input.scss
+++ b/src/components/shared/select-input/select-input.scss
@@ -4,7 +4,7 @@
     font-family: $token-font-family-text;
     width: auto;
     height: 80px;
-    padding: 10px;
+    padding: 0px 10px;
     display: flex;
     flex-direction: column;
 
@@ -17,7 +17,7 @@
     }
 
     &--title {
-        font-size: 18px;
+        font-size: 16px;
         font-weight: $token-font-weight-normal;
         margin: 10px 0px;
         text-align: left;
