--- a/src/components/shared/text-input/text-input.scss
+++ b/src/components/shared/text-input/text-input.scss
@@ -1,8 +1,8 @@
 .text-input {
     font-family: $token-font-family-text;
     width: auto;
-    height: 80px;
-    padding: 10px;
+    height: 75px;
+    padding: 0px 10px;
     display: flex;
     flex-direction: column;
 
@@ -21,7 +21,7 @@
     }
 
     &--title {
-        font-size: 18px;
+        font-size: 16px;
         font-weight: $token-font-weight-normal;
         margin: 10px 0px;
         text-align: left;
