--- a/src/pages/patient-page/new-patient-page/new-patient-page.scss
+++ b/src/pages/patient-page/new-patient-page/new-patient-page.scss
@@ -1,11 +1,11 @@
 .new-patient-page-bg {
     width: 100%;
-    height: 100%;
+    height: auto;
     background-position: center;
     background-size: cover;
     position: absolute;
     top: 0;
-    background-position-y: -110px;
+    // background-position-y: -110px;
 
     .new-patient-page {
         display: flex;
@@ -14,6 +14,6 @@
         justify-content: center;
         flex-direction: row;
         align-items: center;
-        backdrop-filter: blur(60px);
+        backdrop-filter: blur(30px);
     }
 }
