--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -33,9 +33,10 @@ h3 {
         //     background-color: $token-color-white;
         //     box-shadow:inset 2px 2px 5px #b8b9be,inset -3px -3px 7px #fff;
         // }
-        &:hover {
+        &:hover, &:active {
             color: $token-button-primary-text-color-hover;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+            border: 0px solid white;
         }
     }
 }
