--- a/src/components/patient-form/patient-information/patient-information.scss
+++ b/src/components/patient-form/patient-information/patient-information.scss
@@ -6,16 +6,26 @@
     flex-direction: column;
     align-items: center;
     align-content: center;
+    margin: 50px 0px;
 
-    h5{
+    h5 {
         margin: 10px 0px 0px 0px;
     }
 
-    .header{
+    .header {
         width: 100px;
     }
     .content {
         display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-left: 30px;
+
+        @media (min-width: $token-media-query-lg) {
+            flex-direction: row;
+        }
     }
 
     h2 {
@@ -33,6 +43,7 @@
         align-items: flex-start;
         padding: 10px 60px;
         height: 100%;
+        width: 50%;
     }
 
     .standard {
@@ -47,7 +58,7 @@
         border: 0px solid white;
         font-weight: 200;
         
-        box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
         // border: 1px solid #d1d9e6;
         // right: 3%;
         // &:hover {
@@ -57,7 +68,7 @@
         &:hover {
             background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
             color: $token-button-primary-text-color-hover;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
         }
     }
 
@@ -83,7 +94,7 @@
         &:hover {
             background: linear-gradient(153.24deg, #008AFF 12.84%, #08B696 85.76%);
             color: $token-button-primary-text-color-hover;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
         }
     }
 }
