--- a/src/components/shared/page/page-pane/page-pane.scss
+++ b/src/components/shared/page/page-pane/page-pane.scss
@@ -12,10 +12,9 @@
     /* padding: 0px 14px; */
     align-items: center;
     text-align: left;
-    margin: 20px 0px;
 
     @media(min-width: $token-media-query-lg) {
-        width: 83vw;
+        width: auto;
         // min-height: 40vw;
         // max-height: 60vw;
         height: auto;
@@ -26,7 +25,6 @@
         align-items: flex-start;
         flex-direction: column;
         width: 100%;
-        margin-left: 80px;
     }
     h3 {
         text-align: left !important;
