--- a/src/components/shared/radio-input/radio-input.scss
+++ b/src/components/shared/radio-input/radio-input.scss
@@ -1,7 +1,7 @@
 .radio-input {
     font-family: $token-font-family-text;
     width: auto;
-    height: 80px;
+    height: auto;
     display: flex;
     flex-direction: column;
 
@@ -21,9 +21,27 @@
     }
 
     &--input {
+        width: inherit;
+        height: 30px;
+        border-radius: 8px;
         border: 1px solid grey;
-        color: black;
-        padding: 3px 5px;
+        padding: 0px 10px;
+        font-size: 16px;
+        font-family: $token-font-family-text;
+
+        &:focus {
+            outline: none;
+            border: 3px solid $token-button-primary-background-color-base;
+        }  
+    }
+
+    .error-input {
+        border: 3px solid $token-font-color-danger !important;
+        
+        &:focus {
+             border: 3px solid $token-font-color-danger !important;
+        }
+       
     }
 
     &--label {
