--- a/src/components/shared/select-input/select-input.scss
+++ b/src/components/shared/select-input/select-input.scss
@@ -24,17 +24,38 @@
     }
 
     &--input {
-        min-width: 200px;
+        width: inherit;
         height: 30px;
         border-radius: 8px;
         border: 1px solid grey;
-        font-family: $token-font-family-text;
-        font-size: 16px;
         padding: 0px 10px;
+        font-size: 16px;
+        font-family: $token-font-family-text;
+      
+        &:focus {
+            outline: none;
+            border: 3px solid $token-button-primary-background-color-base;
+        }  
     }
+
+    .error-input {
+        border: 3px solid $token-font-color-danger !important;
+        
+        &:focus {
+             border: 3px solid $token-font-color-danger !important;
+        }
+       
+    }
+   
 
     option {
         font-size: 16px;
         font-family: $token-font-family-text;
+
+        &:hover {
+            outline: none;
+            background-color: $token-button-primary-background-color-base;
+            color: white;
+        }
     }
 }
