--- a/src/components/shared/text-input/text-input.scss
+++ b/src/components/shared/text-input/text-input.scss
@@ -28,12 +28,26 @@
     }
 
     &--input {
-        width: 200px;
+        width: inherit;
         height: 30px;
         border-radius: 8px;
         border: 1px solid grey;
         padding: 0px 10px;
         font-size: 16px;
         font-family: $token-font-family-text;
+
+        &:focus {
+            outline: none;
+            border: 3px solid $token-button-primary-background-color-base;
+        }  
+    }
+
+    .error-input {
+        border: 3px solid $token-font-color-danger !important;
+        
+        &:focus {
+             border: 3px solid $token-font-color-danger !important;
+        }
+       
     }
 }
