--- a/src/pages/patient-page/new-patient-page/new-patient-page.scss
+++ b/src/pages/patient-page/new-patient-page/new-patient-page.scss
@@ -1,6 +1,7 @@
 .new-patient-page-bg {
     width: 100%;
-    height: auto;
+    // height: auto;
+    height: 100%;
     background-position: center;
     background-size: cover;
     position: absolute;
