patient information & questionnaire  done

--- a/src/components/shared/address-input/address-input.scss
+++ b/src/components/shared/address-input/address-input.scss
@@ -22,7 +22,7 @@
     }
 
     &--title {
-        font-size: 16px;
+        font-size: 22px;
         font-weight: $token-font-weight-normal;
         margin: 10px 0px;
         text-align: left;
@@ -30,11 +30,14 @@
 
     &--input {
         width: inherit;
-        height: 30px;
+        // height: 30px;
+        height: 35px;
         border-radius: 8px;
-        border: 1px solid grey;
+        border: 0px solid grey;
+        box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
         padding: 0px 10px;
-        font-size: 16px;
+        // font-size: 16px;
+        font-size: 20px;
         font-family: $token-font-family-text;
     }
 }
