--- a/src/components/shared/text-input/text-input.scss
+++ b/src/components/shared/text-input/text-input.scss
@@ -1,7 +1,7 @@
 .text-input {
     font-family: $token-font-family-text;
     width: auto;
-    height: 75px;
+    height: 80px;
     padding: 0px 10px;
     display: flex;
     flex-direction: column;
@@ -14,6 +14,10 @@
         color: $token-font-color-danger;
     }
 
+    .good {
+        color: $token-font-color-danger;
+    }
+
     &--content {
         display: flex;
         justify-content: center;
@@ -21,7 +25,8 @@
     }
 
     &--title {
-        font-size: 16px;
+        // font-size: 16px;
+        font-size: 22px;
         font-weight: $token-font-weight-normal;
         margin: 10px 0px;
         text-align: left;
@@ -29,24 +34,30 @@
 
     &--input {
         width: inherit;
-        height: 30px;
+        // height: 30px;
+        height: 35px;
         border-radius: 8px;
-        border: 1px solid grey;
+        border: 0px solid grey;
+        box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
         padding: 0px 10px;
-        font-size: 16px;
+        // font-size: 16px;
+        font-size: 20px;
         font-family: $token-font-family-text;
 
         &:focus {
             outline: none;
-            border: 3px solid $token-button-primary-background-color-base;
+            // border: 2px solid $token-button-primary-background-color-base;
+            box-shadow: 3px 3px 6px $token-button-primary-background-color-base;
         }  
     }
 
     .error-input {
-        border: 3px solid $token-font-color-danger !important;
+        // border: 2px solid $token-font-color-danger !important;
+        box-shadow: 3px 3px 6px $token-font-color-danger !important;
         
         &:focus {
-             border: 3px solid $token-font-color-danger !important;
+            // border: 2px solid $token-font-color-danger !important;
+            box-shadow: 3px 3px 6px $token-font-color-danger !important;
         }
        
     }
