--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,21 +1,36 @@
 .navbar-bg{
-    box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
-    width: 5vw;
-    height: 100%;
+    // box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+    width: 100%;
+    height: 10%;
+    // border: 1px solid #b8b9be;
     top: 0;
     left: 0px;
     top: 0px;
-    background-size: cover;
+    // background-size: cover;
     display: flex;
-    position: -webkit-sticky; /* Safari */
+    position: -webkit-sticky;
     position: fixed;
+    // background: linear-gradient(96deg, #8F60DF 7%, #6D3BD0 104.25%, #5D379E 125.73%);
+    // background: linear-gradient(328.91deg, #6D3BC2 13.25%, #008AFF 85.78%);
+    background: white;
+    // border-bottom: 1px solid grey;
+    // box-shadow: 0px 8px 10px #8792c9, -3px -3px 6px rgb(0 0 0 / 0%);
+    box-shadow: 0px 8px 10px #aab4e7, -3px -3px 6px rgb(0 0 0 / 0%);
     top: 0px;
+    // color: #b8b9be;
+    color: black;
     justify-content: center;
-    align-items: flex-start;
-    -webkit-animation: slideIn 0.5s backwards;
-    animation: slideIn 0.5s backwards;
+    align-items: center;
+    // -webkit-animation: slideIn 0.5s backwards;
+    // animation: slideIn 0.5s backwards;
     z-index: 20;
     // background-color: white;
+
+    h3 {
+        text-align: center;
+        padding: 20px 0px;
+        width: 20%;
+    }
 
     .link-list {
         font-family: $token-font-family-text;
@@ -23,27 +38,30 @@
         font-size: 15px;
         display: flex;
         width: inherit;
-        flex-direction: column;
+        flex-direction: row;
         align-content: center;
         justify-content: center;
+        // color: #b8b9be;
+        color: black;
         align-items: center;
         // padding: 0px 0px 0px 20px;
         padding: 0px;
     }
 
     &:hover {
-        -webkit-animation: slide 0.5s forwards;
-        animation: slide 0.5s forwards;
+        // -webkit-animation: slide 0.5s forwards;
+        // animation: slide 0.5s forwards;
         padding: 0px;
 
         .link-list {
             padding: 0px;
-            align-items: flex-start;
+            align-items: center;
             width: inherit;
-            backdrop-filter: blur(8px);
+            // backdrop-filter: blur(8px);
 
             span {
-                color: #b8b9be;
+                // color: #b8b9be;
+                color: white;
 
                 &:hover {
                     color: white;
@@ -52,40 +70,51 @@
         }
 
         .blurred {
-            backdrop-filter: blur(5px);
+            // backdrop-filter: blur(5px);
 
             .span {
-                color: #b8b9be;
+                // color: #b8b9be;
+                color: black;
                 display: block;
             };
+
+            a {
+                color: black;
+                justify-content: center;
+            }
         }
     }
 
     .blurred {
         // width: 78%;
         width: inherit;
-        height: 100vw;
+        height: 10%;
         // border: 2px solid #FFFFFF;
-        background-size: cover;
+       
         display: flex;
         align-items: center;
-        flex-direction: column;
+        flex-direction: row;
         align-content: flex-start;
         position: fixed;
 
         ul {
             width: inherit;
+            justify-content: space-between;
         }
 
         li {
             padding: 20px 0px;
-            width: inherit;
+            text-align: center;
+            //width: inherit;jj
+            width: 10%;
         
             &:hover {
-                color: white;
-                background: linear-gradient(328.91deg, #0DEAE2 13.25%, #2DE49D 85.78%);
+                // background: $token-color-primary-light;
+                border-bottom: 2px solid $token-color-primary-dark;
+
                 a {
-                    color: white;
+                    color: black;
+                    justify-content: center;
                 }
 
                 cursor: pointer;
@@ -95,7 +124,7 @@
                 }
 
                 .span {
-                    color: white;
+                    color: black;
                 }
 
             }
@@ -106,95 +135,93 @@
             display: flex;
             width: 100%;
             justify-content: center;
+            // color: #cccccc;
+            color: black;
+            display: block;
 
             &:hover {
                 color: white;
             }
         }
 
-        img {
-            width: 25px;
-            height: 25px;
-            padding: 0px 5px;
-        }
-
-        .span {
-            color: rgb(0, 0, 0, 0);
-            display: none;
-        }
+        // img {
+        //     width: 25px;
+        //     height: 25px;
+        //     padding: 0px 5px;
+        // }
     }
 
     
 }
-@-webkit-keyframes slideIn {
-    0% {
-        width: 16vw;
-        height: 100%;
-    }
+// @-webkit-keyframes slideIn {
+//     0% {
+//         width: 16vw;
+//         height: 100%;
+//     }
 
-    100% {
-        width: 5vw;
-        height: 100%;
-    }
+//     100% {
+//         width: 5vw;
+//         height: 100%;
+//     }
     
-}
-@-moz-keyframes slideIn {
-    0% {
-        width: 16vw;
-        height: 100%;
-    }
+// }
+// @-moz-keyframes slideIn {
+//     0% {
+//         width: 16vw;
+//         height: 100%;
+//     }
 
-    100% {
-        width: 5vw;
-        height: 100vw;
-    }
+//     100% {
+//         width: 5vw;
+//         height: 10%;
+//     }
     
-}
+// }
 
-@keyframes slideIn {
-    0% {
-        width: 16vw;
-        height: 100%;
-    }
+// @keyframes slideIn {
+//     0% {
+//         width: 16vw;
+//         height: 100%;
+//     }
 
-    100% {
-        width: 5vw;
-        height: 100%;
-    }
+//     100% {
+//         width: 5vw;
+//         height: 100%;
+//     }
     
-}
+// }
 
-@-webkit-keyframes slide {
-    0% {
-        width: 5vw;
-        height: 100%;
-    }
-    100% {
-        width: 16vw;
-        height: 100vw;
-    }
+// @-webkit-keyframes slide {
+//     0% {
+//         width: 5vw;
+//         height: 100%;
+//     }
+//     100% {
+//         width: 16vw;
+//         height: 10%;
+//     }
     
-}
+// }
 
-@-moz-keyframes slide {
-    0% {
-        width: 5vw;
-        height: 100%;
-    }
-    100% {
-        width: 16vw;
-        height: 100%;
-    }
-}
+// @-moz-keyframes slide {
+//     0% {
+//         width: 5vw;
+//         height: 100%;
+//     }
+//     100% {
+//         width: 16vw;
+//         height: 100%;
+//     }
+// }
 
-@keyframes slide {
-    0% {
-        width: 5vw;
-        height: 100%;
-    }
-    100% {
-        width: 16vw;
-        height: 100%;
-    }  
-}
+// @keyframes slide {
+//     0% {
+//         width: 5vw;
+//         height: 100%;
+//     }
+//     100% {
+//         width: 16vw;
+//         height: 100%;
+//     }  
+// }
 
