--- a/src/components/patient-form/patient-information/patient-information.scss
+++ b/src/components/patient-form/patient-information/patient-information.scss
@@ -6,30 +6,46 @@
     flex-direction: column;
     align-items: center;
     align-content: center;
-    margin: 50px 0px;
+    // margin: 50px 0px;
 
     h5 {
         margin: 10px 0px 0px 0px;
     }
 
+    .board {
+        text-align: center;
+        box-shadow: inset 5px 5px 5px #b9b9b9, inset -3px -1px 7px #ffffff;
+        border-radius: 20px;
+        padding: 20;
+        width: auto !important;
+        border: 1px solid #dfdfdf;
+    }
+
+    .division {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
     .header {
-        width: 100px;
+        // width: 100px;
+        padding: 0px 20px;
+        display: flex;
     }
     .content {
         display: flex;
         flex-direction: column;
         width: 100%;
-        margin-top: 50px;
-        margin-bottom: 50px;
-        margin-left: 30px;
+        // margin-top: 50px;
+        // margin-bottom: 50px;
+        // margin-left: 30px;
+        // margin-right: 30px;
 
         @media (min-width: $token-media-query-lg) {
             flex-direction: row;
         }
-    }
-
-    h2 {
-        font-family: $token-font-family-heading;
     }
 
     .divider {
@@ -38,27 +54,48 @@
             font-size: $token-font-size-lg;
         }
 
+        h4 {
+            font-weight: 300;
+            font-family: $token-font-family-text;
+        }
+
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        padding: 10px 60px;
+        padding: 10px 20px;
         height: 100%;
-        width: 50%;
+
+        &--full {
+            width: 100% important;
+        }
+
+        &--fifty {
+            width: 50% !important;
+        }
+        
+        &--thirty {
+            width: 30%;
+        }
+
+        &--seventy{
+            width: 70%;
+        }
     }
 
     .standard {
         background-color: $token-button-primary-background-color-base;
-        width: 100px;
-        height: 40px;
+        width: 130px;
+        height: 45px;
         border-radius: 10px;
         margin: 20px 10px;
         font-family: $token-font-family-text;
         color: $token-button-primary-text-color-base;
         font-size: $token-font-size-md;
         border: 0px solid white;
-        font-weight: 200;
-        
-        box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+        font-weight: 400;
+        // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        // box-shadow: 4px 3px 6px 1px #533883, 0px 0px 3px 6px #ffffff;
+        box-shadow: 4px 4px 8px #48297d;
         // border: 1px solid #d1d9e6;
         // right: 3%;
         // &:hover {
@@ -68,23 +105,27 @@
         &:hover {
             background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
             color: $token-button-primary-text-color-hover;
-            box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+            // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+            // box-shadow: 4px 3px 6px 1px #533883, 0px 0px 3px 6px #ffffff;
+            // box-shadow: 4px 4px 6px #48297d;
+            box-shadow:inset 5px 5px 6px #48297d, inset -2px -2px 6px #ba9dec;
         }
     }
 
     .save {
         background-color: $token-color-secondary-base;
-        width: 100px;
-        height: 40px;
+        width: 130px;
+        height: 45px;
         border-radius: 10px;
         margin: 20px 10px;
         font-family: $token-font-family-text;
         color: $token-button-primary-text-color-base;
         font-size: $token-font-size-md;
         border: 0px solid white;
-        font-weight: 200;
+        font-weight: 400;
         
-        box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        box-shadow: 4px 3px 6px 1px #0a6e74, 0px 0px 3px 6px #ffffff;
         // border: 1px solid #d1d9e6;
         // right: 3%;
         // &:hover {
@@ -94,7 +135,78 @@
         &:hover {
             background: linear-gradient(153.24deg, #008AFF 12.84%, #08B696 85.76%);
             color: $token-button-primary-text-color-hover;
-            box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+            // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+            box-shadow: 4px 3px 6px 1px #0a6e74, 0px 0px 3px 6px #ffffff;
+            box-shadow: inset 4px 3px 6px 1px #0a6e74, inset -2px -2px 6px #83e3e9;
         }
+    }
+}
+
+.scale {
+    width: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+    .severely-underweight {
+        background-color: #00a1ff;
+        height: 50px;
+        margin: 2px; 
+        width: auto;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        border-radius: 10px;
+    }
+    .underweight {
+        background-color: #00ffdc;
+        height: 50px;
+        margin: 2px; margin: 2px; 
+        display: flex;
+        align-items: center;
+        width: auto;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    .normal {
+        background-color: #19cb19;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        margin: 2px; 
+        width: auto;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    .overweight {
+        background-color: #ffb020;
+        height: 50px;
+        margin: 2px; 
+        display: flex;
+        align-items: center;
+        width: auto;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    .moderate-obese {
+        background-color: #e7530d;
+        height: 50px;
+        margin: 2px; 
+        display: flex;
+        align-items: center;
+        width: auto;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    .severely-obese {
+        background-color: #dd2121;
+        height: 50px;
+        margin: 2px; 
+        display: flex;
+        align-items: center;
+        width: auto;
+        padding: 10px;
+        border-radius: 10px;
     }
 }
