--- a/src/components/shared/alert-box/alert-box.scss
+++ b/src/components/shared/alert-box/alert-box.scss
@@ -2,13 +2,14 @@
     font-family: $token-font-family-text;
     display: var(--alert-box-display);
     .error {
-        background-color: white;
+        // background-color: white;
         display: flex;
         flex-direction: row;
         align-items: center;
-        border-left: 5px solid $token-font-color-danger;
+        color: $token-font-color-danger;
+        // border-left: 5px solid $token-font-color-danger;
         width: auto;
-        padding: 5px 10px;
-        box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        // padding: 5px 10px;
+        // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
     }
 }
