--- a/src/components/shared/checkbox/checkbox.scss
+++ b/src/components/shared/checkbox/checkbox.scss
@@ -15,14 +15,16 @@
     }
 
     &--title {
-        font-size: 16px;
+        // font-size: 16px;
+        font-size: 22px;
         font-weight: $token-font-weight-normal;
         margin: 10px 0px;
         text-align: left;
     }
 
     &--input {
-        border: 1px solid grey;
+        border: 0px solid grey;
+        box-shadow: 3px 2px 2px rgb(0 0 0 / 25%);
         color: black;
         padding: 3px 5px;
     }
@@ -30,7 +32,8 @@
     &--label {
         padding: 10px 10px;
         font-family: $token-font-family-text;
-        font-size: 16px;
+        // font-size: 16px;
+        font-size: 20px;
     }
 
     &--values {
