--- a/src/components/shared/col/col.scss
+++ b/src/components/shared/col/col.scss
@@ -1,7 +1,7 @@
 .col {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     padding: 0px 10px;
     height: 100%;
 }
