--- a/src/components/shared/modal/modal.scss
+++ b/src/components/shared/modal/modal.scss
@@ -7,7 +7,7 @@
     overflow: auto;
     background-color: rgb(0, 0, 0, 0.4);
     border: 0px solid grey;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);     
 }
 
 .modal-content {
@@ -20,6 +20,7 @@
     display: flex;
     justify-content: center;
     border-radius: 10px;
+    box-shadow: 10px 12px 29px #4a4444; //-12px -10px 20px #ffffff, 
 }
 
 .close {
