--- a/src/pages/patient-page/new-patient-page/new-patient-page.scss
+++ b/src/pages/patient-page/new-patient-page/new-patient-page.scss
@@ -1,20 +1,38 @@
 .new-patient-page-bg {
     width: 100%;
-    // height: auto;
-    height: 100%;
+    height: auto;
+    // height: 100%;
     background-position: center;
     background-size: cover;
     position: absolute;
-    top: 0;
+    padding: 20px 0px;
+    top: 10%;
+
     // background-position-y: -110px;
+    @media (min-width: $token-media-query-lg) {
+        width: 100%;
+    }
+
+    h2 {
+        font-family: $token-font-family-heading;
+        width: inherit;
+        // height: 100%;
+        // display: flex;
+        // backdrop-filter: blur(30px);
+        // flex-direction: column;
+        // justify-content: center;
+        // align-items: center;
+        font-size: 28px;
+    }
 
     .new-patient-page {
         display: flex;
+        padding: 20px 0px;
         width: 100%;
         height: auto;
         justify-content: center;
         flex-direction: row;
         align-items: center;
-        backdrop-filter: blur(30px);
+        // backdrop-filter: blur(30px);
     }
 }
