--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -15,7 +15,8 @@
     background: white;
     // border-bottom: 1px solid grey;
     // box-shadow: 0px 8px 10px #8792c9, -3px -3px 6px rgb(0 0 0 / 0%);
-    box-shadow: 0px 8px 10px #aab4e7, -3px -3px 6px rgb(0 0 0 / 0%);
+    // box-shadow: 0px 8px 10px #aab4e7, -3px -3px 6px rgb(0 0 0 / 0%);
+    box-shadow: 8px 6px 9px #aab4e7, -3px -3px 6px #f1f1f1;
     top: 0px;
     // color: #b8b9be;
     color: black;
@@ -110,7 +111,7 @@
         
             &:hover {
                 // background: $token-color-primary-light;
-                border-bottom: 2px solid $token-color-primary-dark;
+                border-bottom: 3px solid $token-color-primary-dark;
 
                 a {
                     color: black;
