--- a/src/components/patient-database/patient-database.scss
+++ b/src/components/patient-database/patient-database.scss
@@ -3,11 +3,24 @@
     width: 100%;
     height: 100%;
     justify-content: center;
-    flex-direction: row;
-    
+    flex-direction: column;
+
     align-items: center;
     align-content: center;
     // margin: 50px 0px;
+
+    .pagination {
+        margin-top: 40px;
+        background: white;
+        width: auto;
+        border-radius: 20px;
+        box-shadow: 3px 3px 6px #aab4e7;
+    }
+
+    img {
+        width: 20px;
+        height: 20px;
+    }
 
     span {
         font-size: 12px;
@@ -25,7 +38,24 @@
     }
     
     button {
-        background: white;
+        background: rgb(0, 0, 0, 0);
         border: 0px;
+        font-family: $token-font-family-text;
+        color: $token-button-primary-background-color-base;
+        font-size: 17px;
+        text-align: center;
+        margin: 0px 10px;
+
+        
     }
+    .current {
+        background: $token-button-primary-background-color-base;;
+        color: white;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        text-align: center;
+    }
+
+    
 }
