--- a/src/components/shared/row/row.scss
+++ b/src/components/shared/row/row.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     // justify-content: flex-start;
-    padding: 10px;
+    padding: 10px 0px;
     height: auto;
     align-items: center;
     width: 100%;
