--- a/src/components/shared/text-input/text-input.scss
+++ b/src/components/shared/text-input/text-input.scss
@@ -6,6 +6,18 @@
     display: flex;
     flex-direction: column;
 
+    img {
+        width: 20px;
+        height: 20px;
+        position: relative;
+        right: -89%;
+        top: 30px;
+
+        @media (min-width: $token-media-query-lg) {
+            right: -93%;
+        }
+    }
+
     .required {
         color: $token-font-color-danger;
     }
@@ -38,7 +50,8 @@
         height: 35px;
         border-radius: 8px;
         border: 0px solid grey;
-        box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
+        // box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
+        box-shadow:  3px 3px 6px #aab4e7;
         padding: 0px 10px;
         // font-size: 16px;
         font-size: 20px;
