--- a/src/pages/patient-page/patient-database/patient-database.scss
+++ b/src/pages/patient-page/patient-database/patient-database.scss
@@ -1,7 +1,8 @@
 .patient-database-bg {
     width: 100%;
     // height: auto;
-    height: auto;
+    min-height: 1000px;
+    height: max(1777.33);
     padding: 20px 0px;
     background-position: center;
     background-size: cover;
@@ -9,10 +10,16 @@
     top: 10%;
     margin: 0px;
 
-    @media (min-width: $token-media-query-lg) {
-        width: 100%;
-    }
+    // @media screen and (min-height: 930px){
+    //     height: auto !important;
+    // } 
 
+    // @media (min-width: $token-media-query-lg) {
+    //     width: 100%;
+    // }
+
+   
+    
     h2 {
         font-family: $token-font-family-heading;
         width: inherit;
@@ -29,11 +36,11 @@
     .patient-database {
         margin: 0px;
         display: flex;
-        padding: 20px 0px;
+        // padding: 20px 0px;
         width: 100%;
         height: auto;
         justify-content: center;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
         // backdrop-filter: blur(30px);
     }
