patient database search and pagination

--- a/src/components/shared/progress-bar/progress-bar.scss
+++ b/src/components/shared/progress-bar/progress-bar.scss
@@ -35,7 +35,7 @@
         width: 30px;
         height: 30px;
         background-color: $token-color-secondary-base !important;
-        box-shadow: 4px 3px 6px 1px #533883;
+        box-shadow: 4px 3px 6px 1px #0a6e74, 0px 0px 3px 6px #ffffff;
     }
 }
 
