--- a/src/components/shared/table/table.scss
+++ b/src/components/shared/table/table.scss
@@ -8,6 +8,7 @@ table {
     height: auto;
     table-layout: fixed;
     border-spacing: 0px;
+    font-size: 14px;
 
     img {
         width: 20px;
