--- a/src/components/patient-database/patient-database.scss
+++ b/src/components/patient-database/patient-database.scss
@@ -12,9 +12,12 @@
     .pagination {
         margin-top: 40px;
         background: white;
-        width: auto;
+        width: 320px;
         border-radius: 20px;
         box-shadow: 3px 3px 6px #aab4e7;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
     img {
@@ -44,9 +47,19 @@
         color: $token-button-primary-background-color-base;
         font-size: 17px;
         text-align: center;
-        margin: 0px 10px;
+        // margin: 0px 10px;
+    }
 
-        
+    .button-array {
+        background: white;
+        border-radius: 10px;
+        box-shadow: 3px 3px 6px #b8b9be;
+        height: auto;
+        position: absolute;
+        width: 140px;
+        bottom: 84px;
+        right: 45%;
+        // display: none;
     }
     .current {
         background: $token-button-primary-background-color-base;;
