--- a/src/components/shared/date-input/date-input.scss
+++ b/src/components/shared/date-input/date-input.scss
@@ -31,7 +31,7 @@
         height: 35px;
         border-radius: 8px;
         border: 0px solid grey;
-        box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
+        box-shadow: 3px 3px 6px #aab4e7;
         padding: 0px 10px;
         font-size: 20px;
         font-family: $token-font-family-text;
