--- a/src/components/shared/image-upload/image-upload.scss
+++ b/src/components/shared/image-upload/image-upload.scss
@@ -19,6 +19,7 @@
         height: 120px;
         border-radius: 50%;
         padding: 10px 10px;
+        box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
         margin: 10px 10px;
     }
 
