--- a/src/components/shared/container/container.scss
+++ b/src/components/shared/container/container.scss
@@ -1,9 +1,11 @@
 .container {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: auto;
+    min-height: 100%;
     overflow: auto;
     background-color: white;
-    border: 1px solid grey;
+    border: 0px solid grey;
+    box-shadow: 10px 13px 8px #aab4e7, -3px -3px 6px #f1f1f1;
 
     // width: 1000px;
     // height: 300px;
@@ -16,16 +18,7 @@
     justify-content: center;
     align-items: center;
 
-    button {
-        width: 15vw;
-        height: 10vw;
-    }
-
-    img {
-        width: 50px;
-        height: 50px;
-        padding: 0px 5px;
-    }
+    
 }
 
 .container-content {
@@ -33,7 +26,7 @@
     margin: 3% auto;
     padding: 20px;
     border: 0px solid grey;
-    width: 50%;
+    width: 70%;
     height: inherit;
     max-height: 80%;
     display: flex;
