--- a/src/components/report/display-report/display-report.scss
+++ b/src/components/report/display-report/display-report.scss
@@ -13,12 +13,12 @@
         width: auto;
         position: relative;
 
-        // box-shadow:  3px 6px 15px #aab4e7cc;
+        // box-shadow:  3px 5px 9px 0px #aab4e7cc;
         // padding: 10px;
         // position: relative;
         // border-radius: 10px;
         border-bottom: 4px solid $token-button-primary-background-color-base;
-        // box-shadow: 3px 6px 15px $token-button-primary-background-color-base;
+        // box-shadow: 3px 5px 9px 0px $token-button-primary-background-color-base;
         background-color: white;
         // left: -500px;
     }
