--- a/src/components/shared/image-upload/image-upload.scss
+++ b/src/components/shared/image-upload/image-upload.scss
@@ -14,7 +14,7 @@
         width: auto;
         height: auto;
         padding: 10px;
-        box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
+        box-shadow: 3px 5px 9px 0px rgb(0 0 0 / 25%);
         border-radius: 20px;
         margin: 10px;
         font-family: $token-font-family-text;
@@ -45,7 +45,7 @@
         height: 150px;
         border-radius: 50%;
         padding: 10px 10px;
-        box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
+        box-shadow: 3px 5px 9px 0px rgb(0 0 0 / 25%);
         margin: 10px 10px;
     }
 
