--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -26,7 +26,7 @@ h3 {
         font-weight: 200;
         margin: 20px 0px;
         
-        box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+        box-shadow: 3px 5px 9px 0px #b8b9be, -3px -3px 6px #fff;
         // border: 1px solid #d1d9e6;
         // right: 3%;
         // &:hover {
@@ -35,7 +35,7 @@ h3 {
         // }
         &:hover, &:active {
             color: $token-button-primary-text-color-hover;
-            box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+            box-shadow: 3px 5px 9px 0px rgba(0, 0, 0, 0.25);
             border: 0px solid white;
         }
     }
