--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,5 +1,5 @@
 .navbar-bg{
-    // box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+    // box-shadow: 3px 5px 9px 0px #b8b9be, -3px -3px 6px #fff;
     width: 100%;
     height: 10%;
     // border: 1px solid #b8b9be;
@@ -47,7 +47,7 @@
     }
 
     .profile {
-        box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
+        box-shadow: 3px 5px 9px 0px rgb(0 0 0 / 25%);
         border-radius: 50%;
         padding: 5px;
     }
