--- a/src/components/patient-form/patient-information/patient-information.scss
+++ b/src/components/patient-form/patient-information/patient-information.scss
@@ -118,7 +118,7 @@
         font-size: $token-font-size-md;
         border: 0px solid white;
         font-weight: 400;
-        // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        // box-shadow: 3px 5px 9px 0px rgba(0, 0, 0, 0.25);
         // box-shadow: 4px 3px 6px 1px #533883, 0px 0px 3px 6px #ffffff;
         
         // border: 1px solid #d1d9e6;
@@ -130,7 +130,7 @@
         &:hover {
             background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
             color: $token-button-primary-text-color-hover;
-            // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+            // box-shadow: 3px 5px 9px 0px rgba(0, 0, 0, 0.25);
             // box-shadow: 4px 3px 6px 1px #533883, 0px 0px 3px 6px #ffffff;
             // box-shadow: 4px 4px 6px #48297d;
             box-shadow:inset 5px 5px 6px #48297d, inset -2px -2px 6px #ba9dec;
@@ -149,7 +149,7 @@
         border: 0px solid white;
         font-weight: 400;
         
-        // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        // box-shadow: 3px 5px 9px 0px rgba(0, 0, 0, 0.25);
         ;
         // border: 1px solid #d1d9e6;
         // right: 3%;
@@ -160,7 +160,7 @@
         &:hover {
             background: linear-gradient(153.24deg, #008AFF 12.84%, #08B696 85.76%);
             color: $token-button-primary-text-color-hover;
-            // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+            // box-shadow: 3px 5px 9px 0px rgba(0, 0, 0, 0.25);
             ;
             box-shadow: inset 4px 3px 6px 1px #0a6e74, inset -2px -2px 6px #83e3e9;
         }
@@ -177,7 +177,7 @@
         border: 0px solid white;
         font-weight: 400;
         
-        // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        // box-shadow: 3px 5px 9px 0px rgba(0, 0, 0, 0.25);
         box-shadow: 4px 3px 6px 1px #7a2828, 0px 0px 3px 6px #ffffff;
         // border: 1px solid #d1d9e6;
         // right: 3%;
@@ -188,7 +188,7 @@
         &:hover {
             background: linear-gradient(153.24deg, $token-font-color-danger 12.84%, #e72424 85.76%);
             color: $token-button-primary-text-color-hover;
-            // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+            // box-shadow: 3px 5px 9px 0px rgba(0, 0, 0, 0.25);
             // ;
             box-shadow: inset 4px 3px 6px 1px #7a2828, inset -2px -2px 6px #e72424;
         }
