--- a/src/components/shared/address-input/address-input.scss
+++ b/src/components/shared/address-input/address-input.scss
@@ -34,7 +34,7 @@
         height: 35px;
         border-radius: 8px;
         border: 0px solid grey;
-        box-shadow: 3px 3px 6px rgb(0 0 0 / 25%);
+        box-shadow: 3px 5px 9px 0px rgb(0 0 0 / 25%);
         padding: 0px 10px;
         // font-size: 16px;
         font-size: 20px;
