--- a/src/components/shared/alert-box/alert-box.scss
+++ b/src/components/shared/alert-box/alert-box.scss
@@ -10,6 +10,6 @@
         // border-left: 5px solid $token-font-color-danger;
         width: auto;
         // padding: 5px 10px;
-        // box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
+        // box-shadow: 3px 5px 9px 0px rgba(0, 0, 0, 0.25);
     }
 }
