--- a/src/components/shared/container/container.scss
+++ b/src/components/shared/container/container.scss
@@ -8,7 +8,7 @@
     border: 0px solid grey;
     // box-shadow: 10px 9px 38px #aab4e7c4, -3px -3px 6px #f1f1f1;
     // box-shadow: 10px 9px 38px #aab4e7c4, -3px -3px 6px #f1f1f1;
-    box-shadow: 20px 27px 27px -6px #aab4e79c, -3px -3px 6px #f1f1f1;
+    box-shadow: 20px ​24px 16px -15px #aab4e79c, -3px -3px 6px #f1f1f1;
     // width: 1000px;
     // height: 300px;
     overflow: auto;
