--- a/src/components/shared/table/table.scss
+++ b/src/components/shared/table/table.scss
@@ -1,7 +1,7 @@
 table {
     background-color: white;
-    // box-shadow: 3px 3px 6px #b8b9be;
-    box-shadow: 8px 9px 22px #aab4e7cf, -3px -3px 6px #f1f1f1;
+    // box-shadow: 3px 5px 9px 0px #b8b9be;
+    box-shadow: 7px 12px 17px -8px #aab4e7cf, -3px -3px 6px #f1f1f1;
     border-radius: 20px;
     padding: 20px;
     margin-top: 20px;
@@ -71,6 +71,6 @@ table {
         // padding: 0px 10px;
         // overflow: auto;
 
-        box-shadow: 3px 3px 6px white !important;
+        box-shadow: 3px 5px 9px 0px white !important;
     }
 }
