--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -67,7 +67,7 @@
         font-size: $token-font-size-md;
         position: absolute;
         // box-shadow: 24px 17px 25px -4px white, -2px 0px 25px 0px rgb(0 0 0 / 54%);
-        box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+        box-shadow: 3px 5px 9px 0px #b8b9be, -3px -3px 6px #fff;
         border: 1px solid #d1d9e6;
         right: 3%;
         &:hover {
@@ -87,7 +87,7 @@
         font-size: $token-font-size-md;
         border: 1px solid rgb(0, 0, 0, 0);
         font-weight: 200;
-        box-shadow: 3px 3px 6px rgb(72 41 125 / 75%), -2px -2px 6px #fff;
+        box-shadow: 3px 5px 9px 0px rgb(72 41 125 / 75%), -2px -2px 6px #fff;
         margin: 20px;
         &:hover {
             // background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
