--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -98,6 +98,7 @@
         border: 0px solid;
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     .link-list {
