--- a/src/components/shared/toaster/toaster.scss
+++ b/src/components/shared/toaster/toaster.scss
@@ -1,3 +1,34 @@
+.title-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    width: inherit;
+
+    &--iconTitle {
+        width: 60%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+
+        p {
+            padding: 0px 10px;
+            font-size: 18px;
+        }
+    }
+
+    &--button {
+        width: 40%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+        
+    }
+}
+
 .success {
     display: var(--displayAttribute);
     align-items: center;
@@ -9,6 +40,7 @@
     // background: rgb(255, 255, 255, 0.5);
     background: #00ff138f;
     right: 1%;
+    // z-index: 997;
     padding: 10px;
     box-shadow: 3px 3px 3px rgb(0 0 0 / 25%);
     min-height: 100px;
@@ -16,7 +48,6 @@
     min-width: 246px;
     // border-left: 20px solid #46df46;
     /* border: 1px solid #f7f7f7; */
-    z-index: 999;
     font-size: 14px;
     font-family: $token-font-family-text;
     color: white;
@@ -35,6 +66,7 @@
     flex-direction: column;
     padding: 20px;
     right: 1%;
+    // z-index: 997;
     padding: 10px;
     box-shadow: 3px 3px 3px rgb(0 0 0 / 25%);
     min-height: 100px;
